--- a/app/src/main/res/layout/img_adapter.xml
+++ b/app/src/main/res/layout/img_adapter.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/imgadapter"
+    android:layout_margin="4dp"
+    android:scaleType="centerCrop"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="170dp">
 
-    <ImageView
-        android:id="@+id/imgadapter"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-     />
-</LinearLayout>
+</ImageView>
